    dependencies if the parser files haven't been built.  Pull request #235 by
    Kouhei Sutou.
  * Moved old DEVELOPERS file to CONTRIBUTING to match github conventions.
  * TomDoc output now has a "Returns" heading.  Issue #234 by Brian Henderson
  * Metaprogrammed methods can now use the :args: directive in addition to the
    :call-seq: durective.  Issue #236 by Mike Moore.

* Bug fixes
  * Restored behavior of --no-pager alias -T.  Pull request #223 by ruafozy.
  * Fixed extra whitespace output in the rdoc coverage report.  Bug #210 by
    Ryan Davis.
  * RDoc no longer documents its timestamp file when run on an empty
    directory.  Bug #212 by Rainer Keller
  * HTML escape method names in the table of contents.  Bug #219 by Akinori
    MUSHA.
  * Character literals <code>?h</code> now create a new token type to prevent
    loss of the "?" in output.  Bug #220 by Vipul A M.
  * When looking up a method that does not exist, ri escapes the regular
    expression for fallback searches.  Bug #227 by Aaron Patterson.
  * The ri generator now writes the class method data after +module_function+.
    Bug #222 by Zachary Scott, Ruby bug #8225 by David Unric.
  * ri now handles missing ri data files.  Bug #222 by Zachary Scott, Ruby bug
    #8225 by David Unric.
  * Added TomDoc to the supported markup formats section of rdoc --help.
    Bug #214 by Ryan Davis.
  * Fixed documented? check for classes which indicated incorrect 100%
    coverage.  Bug #211 by Ryan Davis.
  * RDoc ignores constants discovered in passing in class and method bodies.
    Bug #209 by Ryan Davis.
  * An :enddoc: at the top level stops all further parsing.  Bug #213 by Ryan
    Davis.
  * Improved handling of multiline call-seq.  Bug #207 by Erik Hollensbe.
  * Fixed text that is missing whitespace for TomDoc.  Bug #248 by Noel Cower.
  * The RDoc methods now store the method they are aliased to.  Bug #206 by
    Jeremy Stephens.