@@ -145,6 +145,9 @@ class RDoc::Markup::ToHtmlCrossref < RDoc::Markup::ToHtml
 
       if path =~ /#/ then
         path << "-label-#{label}"
+      elsif ref.sections and
+            ref.sections.any? { |section| label == section.title } then
+        path << "##{label}"
       else
         path << "#label-#{label}"
       end if label
