@@ -36,6 +36,13 @@ class TestRDocMarkupToHtmlCrossref < XrefTestCase
                  result
   end
 
+  def test_convert_CROSSREF_section
+    @c1.add_section 'Section'
+
+    result = @to.convert 'C1@Section'
+    assert_equal para("<a href=\"C1.html#Section\">Section at C1</a>"), result
+  end
+
   def test_convert_RDOCLINK_rdoc_ref
     result = @to.convert 'rdoc-ref:C1'
 
