@@ -18,6 +18,9 @@
   * TomDoc output now has a "Returns" heading.  Issue #234 by Brian Henderson
   * Metaprogrammed methods can now use the :args: directive in addition to the
     :call-seq: durective.  Issue #236 by Mike Moore.
+  * Sections can be linked to using "@" like labels.  If a section and a label
+    have the same name the section will be preferred.  Issue #233 by Brian
+    Henderson.
 
 * Bug fixes
   * Restored behavior of --no-pager alias -T.  Pull request #223 by ruafozy.
